# pyutils23

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  DEVELOPERS.md  LICENSE  MANIFEST.in  README.md  conanfile.txt  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  pytest.yml
apps/: cgal_problem.cpp  cgal_problem2.cpp  cpp_verify_instance.cpp
include/cgshop2023_core/: cpp_instance.hpp  verify.hpp  verify_instance.hpp
python/: CMakeLists.txt
python/cgshop2023_pyutils/: __init__.py
python/cgshop2023_pyutils/core/: __init__.py  binding.cpp
python/cgshop2023_pyutils/instance_database/: __init__.py  instance_base_database.py  instance_database.py  instance_file_database.py  instance_zip_database.py
python/cgshop2023_pyutils/io/: __init__.py  read.py
python/cgshop2023_pyutils/verifier/: __init__.py  _convert_to_native_format.py
python/cgshop2023_pyutils/zip/: __init__.py  zip_processor.py  zip_reader_errors.py
src/: arrangement_util.hpp  cpp_instance.cpp  fmt_point.h  verify.cpp
tests/: CMakeLists.txt  foobar.py  main.cpp  test_iterator.py  test_numbers.py  test_trivial.py  test_verification.py
